トークンリフレッシュ用エンドポイントのswaggerを設定 #31
